tests/valid/hasentity.nim
# Count: 1
# Negative count: 0

proc MyProc() = discard
