tests/invalid/haspragma.nim
# Count: 0
# Negative count: 1

proc MyProc() = discard
